--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "@auth0/angular-jwt": "^5.2.0",
     "@googlemaps/js-api-loader": "^1.16.8",
     "chart.js": "^4.4.6",
     "express": "^4.18.2",
