--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "chart.js": "^4.4.6",
     "express": "^4.18.2",
+    "local": "^0.3.3",
     "ng2-charts": "^6.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
+    "node-localstorage": "^3.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
